--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
+    "immer": "^10.0.3",
     "motion": "^10.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
